Update User value object

--- a/templates/reservations/index.html.twig
+++ b/templates/reservations/index.html.twig
@@ -12,10 +12,10 @@
                     <h1 class="align-center mb-3">Reservations</h1>
                 </div>
                 <div class="col-6">
-                    {{ form_row(form.firstName, {'attr' : { 'class': 'form-control' }}) }}
+                    {{ form_row(form.email, {'attr' : { 'class': 'form-control' }}) }}
                 </div>
                 <div class="col-6">
-                    {{ form_row(form.surname, {'attr' : { 'class': 'form-control' }}) }}
+                    {{ form_row(form.plainPassword, {'attr' : { 'class': 'form-control' }}) }}
                 </div>
             </div>
             <div class="row mt-3">
